--- a/style.css
+++ b/style.css
@@ -156,12 +156,12 @@ button {
 }
 
 .banner-area .banner-content-link {
-  color: #181813;
+  color: #ecbb9e;
   font-size: 1.125rem;
   letter-spacing: 0.05rem;
   text-decoration: none;
   font-weight: bold;
-  background: #FFB338;
+  background: #61615e;
   padding: 1rem 2.875rem;
   border-radius: 30px;
   margin-top: 1.875rem;
